--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -1,27 +1,36 @@
 name: Backend CI/CD
 
 on:
-    push:
-        branches: [ main ]
-        paths-ignore:
-            - 'frontend/**'
-            - '**/md'
+  push:
+    branches: [ main ]
+    paths-ignore:
+      - 'frontend/**'
+      - '**.md'
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-            - name: Google Auth
-              id: auth
-              uses: 'google-github-actions/auth@v2'
-              with:
-                credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      - name: Google Auth
+        id: auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
-            - name: Deploy to Cloud Run
-              uses: google-github-actions/deploy-cloudrun@v2
-              with:
-                service: redirx
-                region: us-central1
-                source: ./
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Configure Docker
+        run: gcloud auth configure-docker
+
+      - name: Build and Deploy
+        run: |
+          docker build -t gcr.io/redirx/redirx .
+          docker push gcr.io/redirx/redirx
+          gcloud run deploy redirx \
+            --image gcr.io/redirx/redirx \
+            --region us-central1 \
+            --platform managed \
+            --allow-unauthenticated
